--- a/GarageLogic/GarageLogic.csproj
+++ b/GarageLogic/GarageLogic.csproj
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{E1CFEA2F-3A1E-4453-96E3-93E4D02F39AA}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>UIComponent</RootNamespace>
-    <AssemblyName>UIComponent</AssemblyName>
+    <ProjectGuid>{C8E96E6A-9F35-475C-9E31-2943E7AD5BE8}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <RootNamespace>GarageLogic</RootNamespace>
+    <AssemblyName>GarageLogic</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -27,11 +25,26 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="InputValidator.cs" />
-    <Compile Include="IOhandler.cs" />
-    <Compile Include="Messages.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="UI.cs" />
+    <Compile Include="Bike.cs" />
+    <Compile Include="Car.cs" />
+    <Compile Include="eBikeLicenseType.cs" />
+    <Compile Include="eColor.cs" />
+    <Compile Include="eFuelType.cs" />
+    <Compile Include="ElectricEngine.cs" />
+    <Compile Include="Engine.cs" />
+    <Compile Include="eNumOfDoors.cs" />
+    <Compile Include="eNumUtils.cs" />
+    <Compile Include="eVehicleStatus.cs" />
+    <Compile Include="eVehicleType.cs" />
+    <Compile Include="FuelEngine.cs" />
+    <Compile Include="Garage.cs" />
+    <Compile Include="Record.cs" />
+    <Compile Include="Truck.cs" />
+    <Compile Include="ValueOutOfRangeException.cs" />
+    <Compile Include="Vehicle.cs" />
+    <Compile Include="VehicleFactory.cs" />
+    <Compile Include="VehicleRequest.cs" />
+    <Compile Include="Wheel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
