fix some little things

--- a/Ex03.ConsoleUI.csproj
+++ b/Ex03.ConsoleUI.csproj
@@ -39,5 +39,8 @@
       <Name>Ex03.GarageLogic</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
